--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -524,7 +524,7 @@
                                 <div class="col-6 col-md-4 col-lg-3">
                                     <div class="product product-2">
                                         <figure class="product-media">
-                                            <a href="product.html">
+                                            <a href="/productView?q={{this._id}}">
                                                 <img src="uploads/{{this.image.[0]}}" alt="Product image" class="product-image">
                                                 <img src="uploads/{{this.image.[1]}}" alt="Product image" class="product-image-hover">
                                             </a>
