--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -44,33 +44,32 @@
 
                     <div class="products">
                         <div class="row">
-                            {{#each product}}
-                            <div class="col-6 col-md-4 col-lg-4 col-xl-3">
+                            {{#each products}}
+                            <div class="col-6 col-md-3 col-lg-3 col-xl-3">
                                 <div class="product">
                                     <figure class="product-media">
                                         <span class="product-label label-new">New</span>
-                                        <a href="product.html">
-                                            <img src="assets/images/products/product-1.jpg" alt="Product image" class="product-image">
+                                        <a href="/productView?q={{this._id}}">
+                                            <img src="uploads/{{this.image.[0]}}" alt="Product image" class="product-image">
                                         </a>
 
                                         <div class="product-action-vertical">
                                             <a href="#" class="btn-product-icon btn-wishlist btn-expandable"><span>add to wishlist</span></a>
                                         </div><!-- End .product-action -->
 
-                                        <div class="product-action action-icon-top">
+                                        {{!-- <div class="product-action action-icon-top"> use it as reference if need in below --}}
+                                        <div class="product-action ">
                                             <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                            <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a>
-                                            <a href="#" class="btn-product btn-compare" title="Compare"><span>compare</span></a>
                                         </div><!-- End .product-action -->
                                     </figure><!-- End .product-media -->
 
                                     <div class="product-body">
                                         <div class="product-cat">
-                                            <a href="#">Women</a>
+                                            <a href="#">{{this.brand}}</a>
                                         </div><!-- End .product-cat -->
-                                        <h3 class="product-title"><a href="product.html">Nunc dignissim risus</a></h3><!-- End .product-title -->
+                                        <h3 class="product-title"><a href="/productView?q={{this._id}}"> {{this.name}} </a></h3><!-- End .product-title -->
                                         <div class="product-price">
-                                            $50.00
+                                            ₹{{this.price}}
                                         </div><!-- End .product-price -->
                                         <div class="ratings-container">
                                             <div class="ratings">
@@ -78,14 +77,10 @@
                                             </div><!-- End .ratings -->
                                             <span class="ratings-text">( 0 Reviews )</span>
                                         </div><!-- End .rating-container -->
-
-                                        <div class="product-nav product-nav-dots">
-                                            <a href="#" style="background: #cc9966;"><span class="sr-only">Color name</span></a>
-                                            <a href="#" class="active" style="background: #ebebeb;"><span class="sr-only">Color name</span></a>
-                                        </div><!-- End .product-nav -->
                                     </div><!-- End .product-body -->
                                 </div><!-- End .product -->
                             </div><!-- End .col-sm-6 col-lg-4 col-xl-3 -->
+                            {{/each}}
                         </div><!-- End .row -->
 
                         <div class="load-more-container text-center">
