--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -534,7 +534,7 @@
                                             </div><!-- End .product-action -->
 
                                             <div class="product-action product-action-transparent">
-                                                <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                                <a href="/cart?q={{this._id}}" class="btn-product btn-cart"><span>add to cart</span></a>
                                             </div><!-- End .product-action -->
                                         </figure><!-- End .product-media -->
 
