made some changes in cart

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -46,20 +46,21 @@
 															</figure>
 				
 															<h3 class="product-title">
-																<a href="#">Beige knitted elastic runner shoes</a>
+																<a href="#">{{this.productId.name}}</a>
 															</h3><!-- End .product-title -->
 														</div><!-- End .product -->
 													</td>
-													<td class="price-col">$84.00</td>
+													<td class="price-col">{{this.productId.price}}</td>
 													<td class="quantity-col">
 														<div class="cart-product-quantity">
 															<input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0"
 																required>
 														</div><!-- End .cart-product-quantity -->
 													</td>
-													<td class="total-col">$84.00</td>
+													<td class="total-col">{{this.productId.price}}</td>
 													<td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
 												</tr>
+												{{/each}}
 											</tbody>
 										</table><!-- End .table table-wishlist -->
 				
