--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -53,7 +53,7 @@
 													<td class="price-col">{{this.productId.price}}</td>
 													<td class="quantity-col">
 														<div class="cart-product-quantity">
-															<input type="number" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0"
+															<input type="number" class="form-control" value="{{this.quantity}}" min="1" max="10" step="1" data-decimals="0"
 																required>
 														</div><!-- End .cart-product-quantity -->
 													</td>
