cart button in home and shop functionality improved

--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -534,7 +534,11 @@
                                             </div><!-- End .product-action -->
 
                                             <div class="product-action product-action-transparent">
-                                                <a href="/cart?q={{this._id}}" class="btn-product btn-cart"><span>add to cart</span></a>
+                                                {{#if isInCart}}
+                                                <a href="/cart" class="btn-product btn-cart"><span>go to cart</span></a>
+                                                {{else}}
+                                                <a href="/addToCart?q={{this._id}}" class="btn-product btn-cart"><span>add to cart</span></a>
+                                                {{/if}}
                                             </div><!-- End .product-action -->
                                         </figure><!-- End .product-media -->
 
