--- a/views/user/shop.hbs
+++ b/views/user/shop.hbs
@@ -59,7 +59,11 @@
 
                                         {{!-- <div class="product-action action-icon-top"> use it as reference if need in below --}}
                                         <div class="product-action ">
-                                            <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
+                                            {{#if isInCart}}
+                                            <a href="/cart" class="btn-product btn-cart"><span>go to cart</span></a>
+                                            {{else}}
+                                            <a href="/addToCart?q={{this._id}}" class="btn-product btn-cart"><span>add to cart</span></a>
+                                            {{/if}}
                                         </div><!-- End .product-action -->
                                     </figure><!-- End .product-media -->
 
