added remove from cart function

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -58,7 +58,7 @@
 														</div><!-- End .cart-product-quantity -->
 													</td>
 													<td class="total-col">{{this.total}}</td>
-													<td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
+													<td class="remove-col"><a href="/removeFromCart/{{this._id}}" class="btn-remove"><i class="icon-close"></i></a></td>
 												</tr>
 												{{/each}}
 											</tbody>
