--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -114,8 +114,8 @@
 													</tr><!-- End .summary-shipping-row -->
 				
 													<tr class="summary-total">
-														<td>Total:₹</td>
-														<td></td>
+														<td>Total:</td>
+														<td id="cart-total">₹{{#if totalCartValue}} {{totalCartValue}} {{else}} 00.00 {{/if}} </td>
 													</tr><!-- End .summary-total -->
 												</tbody>
 											</table><!-- End .table table-summary -->
