--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -120,7 +120,7 @@
 												</tbody>
 											</table><!-- End .table table-summary -->
 				
-											<a href="checkout.html" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
+											<a href="/checkout" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO CHECKOUT</a>
 										</div><!-- End .summary -->
 				
 										{{!-- <a href="category.html" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE SHOPPING</span><i
