--- a/views/user/productView.hbs
+++ b/views/user/productView.hbs
@@ -90,12 +90,12 @@
                                         <a href="" class="size-guide">{{product.stockAvailable}}</a>
                                     </div><!-- End .details-filter-row -->
 
-                                    <div class="details-filter-row details-row-size">
+                                    {{!-- <div class="details-filter-row details-row-size">
                                         <label for="qty">Qty:</label>
                                         <div class="product-details-quantity">
                                             <input type="number" id="qty" class="form-control" value="1" min="1" max="10" step="1" data-decimals="0" required>
                                         </div><!-- End .product-details-quantity -->
-                                    </div><!-- End .details-filter-row -->
+                                    </div><!-- End .details-filter-row --> --}}
 
                                     <div class="product-details-action">
                                         {{#if isInCart}}
